--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "vue3-carousel": "^0.3.1"
   }
 }
