--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages --dotfiles -d .output/public"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -18,6 +19,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "vue3-carousel": "^0.3.1"
   }
 }
